# uefi-cmake-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  create_iso.sh  run.sh  shell.nix
include/: main.h
include/UEFI/X64/: ProcessorBind.h
src/: main.cpp
